4. Make PC50s come out in one heap on all channels every 14 mins, instead of
on the 14th minute in the connection time for each channel. This should 
reduce (slightly) the dups that are dumped.
5. Speed up input queue processing (a lot).
6. make set/isolate and acc/route mutually exclusive (and issue appropriate
error messages).
7. Improve stat/route_node and stat/route_user for diagnostics.
01Sep01=======================================================================
1. Change build number calc (hopefully for the last time)
27Aug01=======================================================================
1. make rej/wwv and rej/wcy work
26Aug01=======================================================================
1. make all newly learned nodes locked out by default.
2. add lock_nodes.pl which locks out all the nodes in the user file whose
privilege is 1 or less and which isn't mentioned as an argument to the 
command on the command line.
3. make set/node, set/spider and their friends unlock a node as well as make
them one. 
4. Make sh/log et al more efficient / less memory hungry (and the display
the correct way round!)
24Aug01=======================================================================
1. Allow badmsg to reject on interface callsign ('I')
20Aug01=======================================================================
1. protect against PC41s with field[3] == field[2]
2. Redo Julian stuff as proper objects
3. Make the various Log display come out forwards instead of backwards
4. Add the dbgclean routine to system cron to clear out all debug files 
more then 10 days old.
19Aug01=======================================================================
1. Fix rcmds
2. make isolation when there are no filters present work again?
3. dup check PC16/17/19/21 !
17Aug01=======================================================================
1. Sort out PC41 handling to include type 5 records for QRA locators and also